--- a/index.html
+++ b/index.html
@@ -93,6 +93,32 @@
        let number = data['temp']
        $('#temp').text(number)
       })
+
+      fetch("http://spartacodingclub.shop/web/api/movie").then(res => res.json()).then(data => {
+        let rows = data['movies']
+        $('#cards').empty()
+        rows.forEach((a) => {
+          let title = a['title']
+          let desc = a['desc']
+          let comment = a['comment']
+          let star = a['star']
+          let image = a['image']
+
+          let temp_html = `<div class="col">
+                            <div class="card">
+                              <img src="${image}"
+                                class="card-img-top" alt="...">
+                              <div class="card-body">
+                                <h5 class="card-title">영화 ${title}</h5>
+                                <p class="card-text">${desc} </p>
+                                <p> ⭐⭐⭐</p>
+                                <p class="mycomment"> ${comment} </p>
+                              </div>
+                            </div>
+                          </div>`
+                          $('#cards').append(temp_html)
+        })
+      })
     })
   </script>
 </head>
@@ -130,7 +156,7 @@
   </div>
 
   <div class="mycards">
-    <div class="row row-cols-1 row-cols-md-4 g-4">
+    <div id="cards" class="row row-cols-1 row-cols-md-4 g-4">
       <div class="col">
         <div class="card">
           <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
